k8/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: rdicidr
spec:
  selector:
    app: rdicidr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
